tests/error/12_ownership_double_borrow.mire
load kioto

pub fn main: () {
    set x = 10 :i64 mut
    set ref_x = &x
    set ref_x = &x
}